add files to favorites
